feat: model constructors

--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,5 @@
 (executable
  (public_name OrderFlowETL)
  (name main)
- (libraries OrderFlowETL))
+ (libraries mainlib)
+ (modules main Order OrderItem))
