--- a/bin/dune
+++ b/bin/dune
@@ -2,4 +2,4 @@
  (public_name OrderFlowETL)
  (name main)
  (libraries mainlib)
- (modules main Order OrderItem))
+ (modules main Order OrderItem Report))
